@@ -1,5 +1,8 @@
 2006-02-02  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* itpp/base/transforms.cpp: Added DCT implementation based on the
+	ACML library
+
 	* configure.ac, config/acx_fft.m4, itpp/base/transforms.cpp,
 	tests/transforms_test.cpp, tests/transforms_test.ref: New FFT and
 	IFFT implementations added, based on the external ACML library.
